# CSV-Navigator

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/app/: __main__.py  main_app.py
src/app/core/: controller.py  dataloader.py  exporter.py
src/app/gui/: app.py
src/app/gui/components/: buttons.py  filters.py  sidebar_view.py  stats_view.py  table_view.py
src/app/gui/components/sidebar/: import_tool.py
src/app/gui/views/: sidebar_view.py  stats_view.py  table_view.py
src/app/utils/: logger.py
