[project]
name = "CSV-Navigator"
version = "0.1.0"
description = "Python interface for exploring CSV files"
authors = [{ name = "C. Bernard", email = "cfr.bernard@yahoo.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "customtkinter",
    "pandas",
    "numpy",
    "matplotlib",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "black",
    "pre-commit"
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ['py313']

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
